--- a/FXExchange.Tests/FXExchange.Tests.csproj
+++ b/FXExchange.Tests/FXExchange.Tests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FXExchange\FXExchange.csproj" />
+    <ProjectReference Include="..\FXExchange.Core\FXExchange.Core.csproj" />
   </ItemGroup>
 
 </Project>
