--- a/FXExchange/FXExchange.csproj
+++ b/FXExchange/FXExchange.csproj
@@ -9,6 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FXExchange.Core\FXExchange.Core.csproj" />
   </ItemGroup>
 
 </Project>
